2006-02-09  Eric Anholt  <anholt@FreeBSD.org>

	* GL/glx/indirect_reqsize.c:

2006-02-03  Jeremy C. Reed <reed@reedmedia.net>

	* hw/xfree86/os-support/xf86_OSlib.h
	Fix sysmouse handling on DragonFly, mostly garbage arrived.
	From Joerg Sonnenberger.

2006-02-02  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xfree86/exa/exa.c: (exaGetDrawablePixmap), (exaDrawableDirty),
	(exaDrawableIsOffscreen), (exaPrepareAccess), (exaFinishAccess):
	* hw/xfree86/exa/exa_migration.c: (exaDrawableUseScreen),
	(exaDrawableUseMemory):
	* hw/xfree86/exa/exa_priv.h:
	* hw/xfree86/exa/exa_render.c: (exaTryDriverSolidFill),
	(exaTryDriverComposite):
	Move the frequently-repeated code to get the pixmap that backs a
	drawable to a new function, exaGetDrawablePixmap().

2006-02-02  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xfree86/exa/exa_accel.c: (exaFillSpans), (exaCopyNtoN),
	(exaPolyFillRect), (exaSolidBoxClipped), (exaImageGlyphBlt),
	(exaCopyWindow), (exaFillRegionSolid), (exaFillRegionTiled),
	(exaPaintWindow):
	Remove more debugging leftovers.

2006-02-02  Eric Anholt  <anholt@FreeBSD.org>

	reviewed by: zrusin

	* hw/xfree86/exa/Makefile.am:
	* hw/xfree86/exa/exa.c: (exaPixmapIsOffscreen),
	(exaGetOffscreenPixmap), (exaDrawableIsOffscreen),
	(exaPrepareAccess), (exaFinishAccess), (exaCreateGC),
	(exaDriverInit):
	* hw/xfree86/exa/exaPriv.h:
	* hw/xfree86/exa/exa_accel.c: (exaPaintWindow):
	* hw/xfree86/exa/exa_migration.c: (exaMoveOutPixmap),
	(exaPixmapUseScreen), (exaPixmapUseMemory):
	* hw/xfree86/exa/exa_offscreen.c:
	* hw/xfree86/exa/exa_priv.h:
	* hw/xfree86/exa/exa_render.c:
	* hw/xfree86/exa/exa_unaccel.c:
	* hw/xfree86/exa/exaasync.c:
	* hw/xfree86/exa/exaoffscreen.c:
	* hw/xfree86/exa/exapict.c:
	Rearrange and rename EXA code to be a bit more logically organized.
	Also removes a little bit of debugging leftovers.  Summary:

	exa.c ->	exa.c			(miscellaneous code)
			exa_accel.c		(all acceleration code)
			exa_migration.c		(migration logic)