@@ -13,17 +13,22 @@ if H3600_TS
 TS_C = ts.c
 endif
 
+if KDRIVE_HW
+KDRIVE_HW_SOURCES =	\
+	evdev.c		\
+	keyboard.c	\
+	linux.c
+endif
+
 liblinux_a_SOURCES = 	\
 	agp.c		\
 	agp.h		\
 	bus.c		\
-	keyboard.c	\
 	klinux.h	\
-	linux.c		\
 	mouse.c		\
-	evdev.c		\
 	ms.c		\
 	ps2.c		\
+	$(KDRIVE_HW_SOURCES) \
 	$(TSLIB_C)	\
 	$(TS_C)
 
