@@ -4,6 +4,12 @@ INCLUDES = 					\
 
 noinst_LIBRARIES = libkdrive.a libkdrivestubs.a
 
+if KDRIVE_HW
+KDRIVE_HW_SOURCES =	\
+	vga.c		\
+	vga.h
+endif
+
 libkdrive_a_SOURCES =	\
 	fourcc.h	\
 	kaa.c		\
@@ -25,8 +31,7 @@ libkdrive_a_SOURCES =	\
 	ktest.c		\
 	kxv.c		\
 	kxv.h		\
-	vga.c		\
-	vga.h           \
+	$(KDRIVE_HW_SOURCES) \
         $(top_srcdir)/mi/miinitext.c
 
 libkdrivestubs_a_SOURCES = \
